First section done, main spacing issue solved

--- a/style/style.css
+++ b/style/style.css
@@ -21,5 +21,49 @@ h1 {
 }
 
 main {
+    padding-top: 60px;
     background-color: rgba(246,248,249,255);
+}
+
+#main_section {
+    width: 900px;
+    height: 1200px;
+    margin: auto;
+    background-color: rgba(255,255,255,255);
+}
+
+#adder {
+    line-height: 60px;
+    vertical-align: middle;
+    padding-top: 5px;
+    padding-left: 60px;
+}
+
+.white_text {
+    color: rgba(255, 255, 255, 255);
+}
+
+#task_adder {
+    font-size: 15px;
+    line-height: 15px;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    margin-right: 2px;
+    padding: 10px;
+    display: inline-block;
+    border-radius: 5px;
+    background-color: rgba(71,173,241,255);
+}
+
+#section_adder {
+    font-size: 15px;
+    line-height: 15px;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    margin-left: 2px;
+    padding: 10px;
+    border: 1px solid rgba(208,214,217,255);
+    border-radius: 5px;
+    display: inline-block;
+    color: rgba(208,214,217,255);
 }
